--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./lesson-01.js" type="module"></script>
+    <!-- <script src="./lesson-01.js" type="module"></script> -->
+    <script src="./lesson-02.js" type="module"></script>
   </body>
 </html>
