--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- <script src="./lesson-01.js" type="module"></script> -->
-    <script src="./lesson-02.js" type="module"></script>
+    <!-- <script src="./lesson-02.js" type="module"></script> -->
+    <script src="./lesson-03.js" type="module"></script>
   </body>
 </html>
