--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <!-- <script src="./lesson-01.js" type="module"></script> -->
     <!-- <script src="./lesson-02.js" type="module"></script> -->
-    <script src="./lesson-03.js" type="module"></script>
-  </body>
+    <!-- <script src="./lesson-03.js" type="module"></script> -->
+    <script src="./lesson-04.js" type="module"></script>
+    </body>
 </html>
