--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <p class="taskTitle">ЗАДАЧА 3</p>
+      <input id="passwordInput" type="text" />
+      <button id="passwordButton">Приховати</button>
+    </div>
     <!-- <script src="./lesson-01.js" type="module"></script> -->
     <!-- <script src="./lesson-02.js" type="module"></script> -->
     <!-- <script src="./lesson-03.js" type="module"></script> -->
     <script src="./lesson-04.js" type="module"></script>
-    </body>
+  </body>
 </html>
