--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
+    <!-- <div>
       <p class="taskTitle">ЗАДАЧА 3</p>
       <input id="passwordInput" type="text" />
       <button id="passwordButton">Приховати</button>
+    </div> -->
+    <div>
+      <p class="taskTitle">ЗАДАЧА 1</p>
+      <button id="alertButton">SHOW ME</button>
+      <input id="alertInput" type="text" />
     </div>
     <!-- <script src="./lesson-01.js" type="module"></script> -->
     <!-- <script src="./lesson-02.js" type="module"></script> -->
