--- a/index.html
+++ b/index.html
@@ -12,10 +12,23 @@
       <input id="passwordInput" type="text" />
       <button id="passwordButton">Приховати</button>
     </div> -->
-    <div>
+    <!-- <div>
       <p class="taskTitle">ЗАДАЧА 1</p>
       <button id="alertButton">SHOW ME</button>
       <input id="alertInput" type="text" />
+    </div> -->
+
+    <div>
+      <p class="taskTitle">ЗАДАЧА 6</p>
+      <ul class="list">
+        <li class="listItem">1</li>
+        <li class="listItem">4</li>
+        <li class="listItem">8</li>
+        <li class="listItem">16</li>
+        <li class="listItem">20</li>
+        <li class="listItem">30</li>
+      </ul>
+      <button id="double">Подвоїти</button>
     </div>
     <!-- <script src="./lesson-01.js" type="module"></script> -->
     <!-- <script src="./lesson-02.js" type="module"></script> -->
