--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -18,7 +19,7 @@
       <input id="alertInput" type="text" />
     </div> -->
 
-    <div>
+    <!-- <div>
       <p class="taskTitle">ЗАДАЧА 6</p>
       <ul class="list">
         <li class="listItem">1</li>
@@ -29,10 +30,23 @@
         <li class="listItem">30</li>
       </ul>
       <button id="double">Подвоїти</button>
-    </div>
+    </div> -->
+    <p class="taskTitle">ЗАДАЧА 13</p>
+    <ul class="grid">
+      <li class="gridItem"></li>
+      <li class="gridItem"></li>
+      <li class="gridItem"></li>
+      <li class="gridItem"></li>
+      <li class="gridItem"></li>
+      <li class="gridItem"></li>
+      <li class="gridItem"></li>
+      <li class="gridItem"></li>
+      <li class="gridItem"></li>
+    </ul>
     <!-- <script src="./lesson-01.js" type="module"></script> -->
     <!-- <script src="./lesson-02.js" type="module"></script> -->
     <!-- <script src="./lesson-03.js" type="module"></script> -->
+
     <script src="./lesson-04.js" type="module"></script>
   </body>
 </html>
