--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
@@ -31,7 +34,7 @@
       </ul>
       <button id="double">Подвоїти</button>
     </div> -->
-    <p class="taskTitle">ЗАДАЧА 13</p>
+    <!-- <p class="taskTitle">ЗАДАЧА 13</p>
     <ul class="grid">
       <li class="gridItem"></li>
       <li class="gridItem"></li>
@@ -42,11 +45,39 @@
       <li class="gridItem"></li>
       <li class="gridItem"></li>
       <li class="gridItem"></li>
-    </ul>
+    </ul> -->
+
+    <!-- ЗАДАЧА 16
+
+    <table id="productTable">
+      <thead>
+        <tr>
+          <th>Назва</th>
+          <th>Ціна</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Яблука</td>
+          <td>20 грн</td>
+        </tr>
+        <tr>
+          <td>Банани</td>
+          <td>30 грн</td>
+        </tr>
+        <tr>
+          <td>Апельсини</td>
+          <td>25 грн</td>
+        </tr>
+      </tbody>
+    </table>
+    <div id="productDetails"></div> -->
+
     <!-- <script src="./lesson-01.js" type="module"></script> -->
     <!-- <script src="./lesson-02.js" type="module"></script> -->
     <!-- <script src="./lesson-03.js" type="module"></script> -->
+    <!-- <script src="./lesson-04.js" type="module"></script> -->
 
-    <script src="./lesson-04.js" type="module"></script>
+    <script src="./lesson-05.js" type="module"></script>
   </body>
 </html>
