--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
@@ -72,6 +69,21 @@
       </tbody>
     </table>
     <div id="productDetails"></div> -->
+
+    <!-- ЗАДАЧА 8 -->
+    <!-- <div>
+      <p class="taskTitle">ЗАДАЧА 8</p>
+      <div class="statList">
+        <button class="calcButton" data-number="5">Button #1</button>
+        <button class="calcButton" data-number="2">Button #2</button>
+        <button class="calcButton" data-number="10">Button #3</button>
+        <button class="calcButton" data-number="50">Button #4</button>
+        <button class="calcButton" data-number="0">Button #5</button>
+        <button class="calcButton" data-number="20">Button #6</button>
+      </div>
+      <button id="resultButton">Вивести результат</button>
+      <div id="resultSection"></div>
+    </div> -->
 
     <!-- <script src="./lesson-01.js" type="module"></script> -->
     <!-- <script src="./lesson-02.js" type="module"></script> -->
