--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <!-- <script src="./lesson-03.js" type="module"></script> -->
     <!-- <script src="./lesson-04.js" type="module"></script> -->
 
-    <script src="./lesson-05.js" type="module"></script>
+   <!-- <script src="./lesson-05.js" type="module"></script> -->
+     <script src="./lesson-06.js" type="module"></script>
   </body>
 </html>
